[workspace]
members = ["suppaftp", "suppaftp-cli"]
resolver = "2"

[workspace.package]
version = "6.1.0"
edition = "2024"
rust-version = "1.85.0"
authors = [
  "Christian Visintin <christian.visintin@veeso.dev>",
  "Matt McCoy <mattnenterprise@yahoo.com>",
]
repository = "https://github.com/veeso/suppaftp"
license = "MIT OR Apache-2.0"
keywords = ["ftp", "ftps", "network-protocol", "async", "ftp-client"]
categories = ["asynchronous", "network-programming"]
